<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.s1mplify.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
<<<<<<< HEAD
        android:id="@+id/nav_gallery"
        android:name="com.example.s1mplify.ui.gallery.GalleryFragment"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.s1mplify.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
=======
=======
>>>>>>> f978cba (Updated a new layout)
=======
>>>>>>> f978cba (Updated a new layout)
=======
        android:id="@+id/nav_stats"
        android:name="com.example.s1mplify.ui.gallery.GalleryFragment"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> f978cba0161f83f72e315cdf090db8a81106d0c9
=======
>>>>>>> f978cba (Updated a new layout)
=======
>>>>>>> f978cba (Updated a new layout)
=======
>>>>>>> f978cba (Updated a new layout)
        android:label="STASTICS"
=======
        android:label="Stastics"
>>>>>>> parent of f978cba (Updated a new layout)
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.s1mplify.ui.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/about_us"
        android:name="com.example.s1mplify.ui.aboutus"
        android:label="About Us"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/sign_option"
        android:name="com.example.s1mplify.ui.LoginFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
<<<<<<< HEAD
>>>>>>> f978cba (Updated a new layout)
=======
>>>>>>> f978cba0161f83f72e315cdf090db8a81106d0c9
</navigation>